Migbash/issue-1441 (#1660)
