# openapi.yaml
@@ -28,6 +28,15 @@ paths:
   # [L] - SEO-PAGES
   /api/data/main/seo-pages:
     get:
+      tags:
+        - SEO + Sitemap
+
+      summary:
+        Returns a targets' player main SEO widget (data).
+
+      description:
+        Optional extended description in CommonMark or HTML.
+
       parameters:
         - name: filter
           in: query
@@ -39,45 +48,75 @@ paths:
           schema:
             type: object
             properties:
-              # ?term=[...]
+              ### NOTE:
+              ### ?lang=[...]
+              lang:
+                type: string
+                example: en
+              ### NOTE:
+              ### ?term=[...]
               term:
                 type: string
                 example: football
-              # ?player_id=[...]
+                enum:
+                  - football
+                  - competitions
+                  - player
+                  - team
+              ### NOTE:
+              ### ?player_id=[...]
               player_id:
                 type: number
                 example: 205881
-              # ?fixture_id=[...]
+              ### NOTE:
+              ### ?fixture_id=[...]
               fixture_id:
                 type: number
                 example: 18548156
-              # ?page=[...]
+              ### NOTE:
+              ### ?player_id=[...]
+              competition_id:
+                type: number
+                example: 31
+              ### NOTE:
+              ### ?page=[...]
               page:
                 type: string
                 enum:
                   - fixtures
                   - player
+                  - competitions
+                  - competition
                 example: player
-              # ?hasura=[...]
+              ### NOTE:
+              ### ?hasura=[...]
               hasura:
                 type: boolean
                 example: true
+                enum:
+                  - true
+                  - false
             additionalProperties: false
             oneOf:
-              # data (main) [fixture]
+              # ### NOTE:
+              # ### Data for Competitions.
+              - required: [lang, page]
+              # ### NOTE:
+              # ### Data for Fixture.
               - required: [fixture_id, page]
               - required: [fixture_id, page, hasura]
-              # data (main) [player]
+              # ### NOTE:
+              # ### Data for Player.
               - required: [player_id, page]
               - required: [player_id, page, hasura]
-              # data (translations) terms
+              # ### NOTE:
+              # ### Data for Competition.
+              - required: [competition_id, page]
+              - required: [competition_id, page, hasura]
+              # ### NOTE:
+              # ### Data for Translations (terms).
               - required: [term]
-      summary:
-        Returns a targets' player main SEO widget (data).
-      description:
-        Optional extended description in CommonMark or HTML.
-      tags:
-        - Player Page
+
       responses:
         200:
           description:
@@ -1198,6 +1237,116 @@ paths:
         200:
           description:
             User Updated!
+
+  # ===================
+  # COMPETITIONS PAGE
+  # ===================
+
+  # [CP] - Highlights (lobby)
+  /api/data/lobby/highlights:
+    get:
+      parameters:
+        - name: filter
+          in: query
+          description:
+            Target fixture (main) SCOREBOARD widget data parameters
+          required: true
+          style: form
+          explode: true
+          schema:
+            type: object
+            properties:
+              # ?fixture_id=[...]
+              competition_id:
+                type: number
+                example: 23
+              # ?seo=[...]
+              seo:
+                type: boolean
+                example: true
+              # ?hasura=[...]
+              hasura:
+                type: boolean
+                example: true
+              # ?lang=[...]
+              lang:
+                type: string
+                example: es
+            additionalProperties: false
+            oneOf:
+              # translation
+              - required: [lang]
+              - required: [lang, hasura]
+              # data (main)
+              - required: [competition_id]
+              - required: [competition_id, hasura]
+              # data (seo)
+              - required: [seo, lang]
+              - required: [seo, lang, hasura]
+      summary:
+        Returns a targets' competition (id) main Scoreboard widget (data).
+      responses:
+        200:
+          description:
+            Target competition HIGHLIGHTS widget data
+
+  # [CP] - Main (lobby)
+  /api/data/competition/main:
+    get:
+      summary: Returns a targets' competition (id) main Scoreboard widget (data).
+
+      parameters:
+        - name: filter
+          in: query
+          description: Target fixture (main) SCOREBOARD widget data parameters
+          required: true
+          style: form
+          explode: true
+          schema:
+            type: object
+            properties:
+              # ?competition_id=[...]
+              competition_id:
+                type: number
+                example: 23
+              # ?seo=[...]
+              seo:
+                type: boolean
+                example: true
+              # ?hasura=[...]
+              hasura:
+                type: boolean
+                example: true
+              # ?lang=[...]
+              lang:
+                type: string
+                example: "es"
+              # ?participantUid=[...]
+              participantUid:
+                type: string
+                example: "h1231h23k124h123asd"
+              # ?predictionChoice=[...]
+              predictionChoice:
+                type: string
+                example: "yes"
+                enum:
+                  - "yes"
+                  - "no"
+            additionalProperties: false
+            oneOf:
+              # translation
+              - required: [lang]
+              - required: [lang, hasura]
+              # data (main)
+              - required: [competition_id]
+              - required: [competition_id, hasura]
+              # data (seo)
+              - required: [seo, lang]
+              - required: [seo, lang, hasura]
+
+      responses:
+        200:
+          description: Target competition HIGHLIGHTS widget data
 
 components:
 
