# src/routes/api/data/competition/rules/+server.ts
@@ -1,0 +1,110 @@
+// #region ➤ 📦 Package Imports
+
+import { json } from '@sveltejs/kit';
+
+import { checkNull } from '$lib/utils/platform-functions.js';
+import { CRULES_CP_ENTRY_1 } from '@betarena/scores-lib/dist/functions/func.competition.target.rules.js';
+import dotenv from 'dotenv';
+
+import type { B_H2H_T } from '@betarena/scores-lib/types/head-2-head.js';
+import type { B_COMP_RULES_T } from '@betarena/scores-lib/types/types.competition.rules.js';
+
+// #endregion ➤ 📦 Package Imports
+
+// #region ➤ 📌 VARIABLES
+
+dotenv.config();
+
+// #endregion ➤ 📌 VARIABLES
+
+// #region ➤ 🛠️ METHODS
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~
+//  [MAIN] ENDPOINT METHOD
+// ~~~~~~~~~~~~~~~~~~~~~~~~
+
+export async function GET
+(
+  req
+): Promise < unknown >
+{
+  try
+  {
+    // ### NOTE:
+    // ### Handle url-query data.
+    const lang: string = req?.url?.searchParams?.get('lang');
+    const hasura: string = req?.url?.searchParams?.get('hasura');
+
+    // ACTION: Get Fixture Scoreboard (WIDGET) TRANSLATION data;
+    // NOTE: With [HASURA] Fallback;
+    const if_M_1: boolean =
+      !checkNull(lang)
+    ;
+    if (if_M_1)
+    {
+      // TODO: LIN_C_T_A
+      const data =	await fallbackMainData_1
+      (
+        lang
+      );
+      if (data != undefined) return json(data);
+    }
+
+    // IMPORTANT - fallback to NULL
+    return json
+    (
+      null
+    );
+  }
+  catch (ex)
+  {
+    console.error
+    (
+      '❌ Err: ',
+      ex
+    );
+    return json
+    (
+      null,
+      {
+        status: 400,
+        statusText: 'Uh-oh! There has been an error'
+      }
+    );
+  }
+}
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~
+//  [MAIN] METHOD
+// ~~~~~~~~~~~~~~~~~~~~~~~~
+
+/**
+ * @summary
+ * [MAIN] [FALLBACK] [#1] method
+ * @version
+ * 1.0 - past versions: []
+ * @param
+ * {string} lang
+ * @returns
+ * Promise < B_PSEO_T >
+ */
+async function fallbackMainData_1
+(
+  lang: string
+): Promise < B_H2H_T >
+{
+  const dataRes0: [ Map < string, B_COMP_RULES_T >, string[] ] = await CRULES_CP_ENTRY_1
+  (
+    [lang]
+  );
+
+  if (dataRes0?.[0]?.size == 0) return null;
+
+  return dataRes0?.[0]?.get(lang);
+}
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~
+//  [HELPER] OTHER METHODS
+// ~~~~~~~~~~~~~~~~~~~~~~~~
+
+// #endregion ➤ 🛠️ METHODS
